# lambda-benchmark

./: .gitignore  README.md  justfile  results.json
collector/: Cargo.toml
collector/src/: main.rs
functions/go/: go.mod  main.go
functions/java/: build.gradle
functions/java/src/main/java/benchmark/: Handler.java
functions/llrt/: bootstrap
functions/node/: index.mjs
functions/node-bundled/: package-lock.json  package.json
functions/python/: main.py
functions/rust/: Cargo.toml
functions/rust/src/: main.rs
invoker/: Cargo.toml
invoker/src/: main.rs
